# RadiancePlatform

./: .gitignore  Cargo.toml  README.md
documentation/: README.md  characters.md  dialogs.md  game.md  maps.md  objects.md
example_game/: README.md  game.yaml
example_game/characters/: angry_antagonist.yaml  enemy_1.yaml  player.yaml
example_game/dialogs/: dialog.yaml
example_game/maps/: basement.yaml  room_1.yaml  room_2.yaml
example_game/objects/: door_1.yaml  door_2.yaml  hat.yaml  key.yaml  table.yaml
src/: lib.rs  main.rs
src/game/: mod.rs
src/game/characters/: attribute.rs  interactions.rs  mod.rs  role.rs
src/game/config_parsers/: characters.rs  dialogs.rs  game.rs  maps.rs  mod.rs  objects.rs
src/game/dialogs/: mod.rs
src/game/maps/: mod.rs
src/game/objects/: mod.rs
src/game/screen/: mod.rs
src/game/visual/: mod.rs
tests/: integration_tests.rs  test_room.yaml
