[package]
name = "radiance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
walkdir = "2"
yaml-rust = "0.4"
crossterm = "0.23"
serde = {version = "1.0.136", features = ["derive"]}
serde_yaml = "0.8"
smawk = "0.3"
textwrap = "0.15"
